# galakser

./: .gitignore  Dockerfile  add_word_indices.py  architecture.md  avis_og_test.txt  build_bitmaps.py  convert.sql  create_indices.sql  demokrati_network.json  docker-compose.yml  export_tables.py  graph_builder.py  import.py  main.py  manifest.md  network_explorer.py  pyproject.toml  requirements.txt  sample.py  test_galakser.ipynb  test_graf.html
.agents/: AGENTS.md
paper/: main.tex
