[project]
name = "galakser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pyroaring>=1.1.0",
    "python-louvain>=0.16",
    "pyvis>=0.3.2",
    "uvicorn>=0.49.0",
]
